--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
         </dependency>
         <dependency>
             <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-gson</artifactId>
+            <artifactId>feign-jackson</artifactId>
             <version>${openFeignVersion}</version>
         </dependency>
         <dependency>
