--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,4 +1,16 @@
+feign:
+  client:
+    config:
+      auth:
+        connectTimeout: 5000
+        readTimeout: 5000
+        loggerLevel: full
+
 logging:
   level:
     # See https://docs.spring.io/spring-cloud-openfeign/docs/current/reference/html/#feign-logging
     com.emeraldhieu.app.user.UserClient: DEBUG
+    com.emeraldhieu.app.auth.AuthClient: DEBUG
+
+
+
