--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -5,12 +5,15 @@ feign:
         connectTimeout: 5000
         readTimeout: 5000
         loggerLevel: full
+      post:
+        loggerLevel: full
 
 logging:
   level:
     # See https://docs.spring.io/spring-cloud-openfeign/docs/current/reference/html/#feign-logging
     com.emeraldhieu.app.user.UserClient: DEBUG
     com.emeraldhieu.app.auth.AuthClient: DEBUG
+    com.emeraldhieu.app.post.PostClient: DEBUG
 
 
 
