Rename springCloudVersion to be camelCase

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>feign-playground</description>
     <properties>
         <java.version>11</java.version>
-        <spring-cloud.version>2021.0.4</spring-cloud.version>
+        <springCloudVersion>2021.0.4</springCloudVersion>
         <openFeignVersion>11.10</openFeignVersion>
     </properties>
 
@@ -24,7 +24,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
+                <version>${springCloudVersion}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
