--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,17 @@
             <artifactId>feign-slf4j</artifactId>
             <version>${openFeignVersion}</version>
         </dependency>
+
+        <!--
+            Fault tolerance using Spring Cloud Circuit Breaker.
+            See https://spring.io/projects/spring-cloud-circuitbreaker#spring-boot-config
+            See https://docs.spring.io/spring-cloud-openfeign/docs/current/reference/html/#spring-cloud-feign-circuitbreaker-fallback
+        -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
